<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
            android:title="@string/setting_about">

        <Preference
                android:key="button"
                android:title= "@string/setting_opensource_title"
                android:summary="@string/setting_opensource_description" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/setting_notifications_title">

        <CheckBoxPreference
                android:key="@string/pref_curtain_notifications"
                android:title="@string/setting_show_notifications_title"
                android:checked="true"
                android:summary="@string/setting_show_notifications_body" />

    </PreferenceCategory>

</PreferenceScreen>